Fix popup word wrap, bumping version to 3.4.1.

--- a/trunk/src/styles/popup.css
+++ b/trunk/src/styles/popup.css
@@ -5,6 +5,7 @@
 /* General Page Styles */
 
 body {
+  white-space: nowrap;
   overflow-x: hidden;
   overflow-y: auto;
   height: 6.2em;
